--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,21 @@ jobs:
       run: npm test -- --browsers Chrome
     - name: Run cli tests
       run: cd tools/cli && npm i && npm run test
-      
+
+  changesets:
+    runs-on: windows-latest
+    steps:
+     - uses: actions/checkout@v2
+       with:
+         ref: ${{ github.event.pull_request.head.ref }}
+     - name: Use Node.js ${{ matrix.node-version }}
+       uses: actions/setup-node@v2
+       with:
+        node-version: ${{ matrix.node-version }}
+     - name: Approve a PR
+       if: ${{ needs.build.result == 'success' }}
+       run: npx changesets status --since=main
+
   dependabot:
     needs: build
     runs-on: windows-latest
