--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,8 +44,7 @@ jobs:
        uses: actions/setup-node@v2
        with:
         node-version: ${{ matrix.node-version }}
-     - name: Approve a PR
-       if: ${{ needs.build.result == 'success' }}
+     - name: Check for changesets
        run: npx changesets status --since=main
 
   dependabot:
