--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,6 +44,8 @@ jobs:
        uses: actions/setup-node@v2
        with:
         node-version: ${{ matrix.node-version }}
+     - name: Install modules
+       run: npm i
      - name: Check for changesets
        run: npx changesets status --since=main
 
