--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,8 @@ jobs:
     runs-on: windows-latest
     steps:
      - uses: actions/checkout@v2
+       with:
+        fetch-depth: 0
      - name: Use Node.js ${{ matrix.node-version }}
        uses: actions/setup-node@v2
        with:
