--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,7 @@ jobs:
       - name: Publish
         if: steps.changesets.outputs.hasChangesets == 'false'
         # You can do something when a publish should happen.
-        run: npx changeset tag && git push --follow-tags
+        run: npx changeset publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
