--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm run build:dev
     - run: npm run build:im
     - run: npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
-    - run: npm run publish
+    # - run: npm run publish
       env:
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
