--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@changesets/cli": "^2.26.2"
+    "@changesets/cli": "^2.26.2",
+    "octokit": "^3.1.1"
   }
 }
