--- a/.github/release.yml
+++ b/.github/release.yml
@@ -6,15 +6,15 @@ changelog:
     - title: Breaking Changes
       labels:
         - major
+        - text-field
     - title: Features
       labels:
         - minor
+        - text-field
     - title: Bugfixes
       labels:
         - patch
+        - text-field
     - title: Dependency updates
       labels:
         - dependencies
-    - title: Other Changes
-      labels:
-        - "*"
