--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,12 +27,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Build components
-      run: npm run build:dev
-    - name: Run tests
-      run: npm test -- --browsers Chrome
-    - name: Run cli tests
-      run: cd tools/cli && npm i && npm run test
       
   dependabot:
     needs: build
@@ -53,7 +47,7 @@ jobs:
          PR_URL: ${{github.event.pull_request.html_url}}
          GITHUB_TOKEN: ${{secrets.DEPENDABOT}}
      - name: Merge a PR
-       if: ${{ steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == 'version-update:semver-patch' }}
+       if: ${{ steps.dependabot-metadata.outputs.update-type == 'version-update:semver-minor' || steps.dependabot-metadata.outputs.update-type == 'version-update:semver-patch' }}
        run: gh pr merge --auto --merge  "$PR_URL"
        env:
          PR_URL: ${{github.event.pull_request.html_url}}
