--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,10 +45,10 @@ jobs:
        run: gh pr review --approve "$PR_URL"
        env:
          PR_URL: ${{github.event.pull_request.html_url}}
-         GITHUB_TOKEN: ${{secrets.DEPENDABOT}}
+         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN }}
      - name: Merge a PR
        if: ${{ steps.dependabot-metadata.outputs.update-type == 'version-update:semver-minor' || steps.dependabot-metadata.outputs.update-type == 'version-update:semver-patch' }}
        run: gh pr merge --auto --merge  "$PR_URL"
        env:
          PR_URL: ${{github.event.pull_request.html_url}}
-         GITHUB_TOKEN: ${{secrets.DEPENDABOT}}
+         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN }}
