--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,13 +20,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Setup Chrome
-      uses: browser-actions/setup-chrome@v0.0.0
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
+    - name: test
+      run: echo ${{ github.actor }}
       
   dependabot:
     needs: build
