--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,18 +20,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Setup Chrome
-      uses: browser-actions/setup-chrome@v0.0.0
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
+    - name: test
+      run: echo ${{ github.actor }}
       
   dependabot:
     needs: build
     runs-on: windows-latest
-    if: ${{ github.actor == 'dependabot[bot]' }}
+    if: ${{ github.event.pull_request.user.login == 'dependabot[bot]' }}
     steps:
      - uses: actions/checkout@v2
        with:
