--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,3 +52,11 @@ jobs:
        env:
          PR_URL: ${{github.event.pull_request.html_url}}
          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN }}
+     - name: Comment on major updates
+       if: ${{steps.metadata.outputs.update-type == 'version-update:semver-major' }}
+       run: |
+        gh pr comment $PR_URL --body "I'm **not approving** this PR because **it includes a major update of a dependency**"
+        gh pr edit $PR_URL --add-label "requires-manual-qa"
+       env:
+        PR_URL: ${{github.event.pull_request.html_url}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
